assets/visuals/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

::-webkit-scrollbar-track {
  background: #1e1e1e;
}

::-webkit-scrollbar-thumb {
  background: #555;
  border: 2px solid #1e1e1e;
}

::-webkit-scrollbar-thumb:hover {
  background: #555;
}

::-webkit-scrollbar-button {
  display: none;
}

body {
  display: flex;
  flex-direction: column;
  font-family: "fira-sans-2", sans-serif;
  height: 100vh;
  width: 100%;
  background-color: black;
  color: whitesmoke;
  margin: 0;
  font-weight: 400;
  font-style: normal;
  writing-mode: horizontal-tb;

  -ms-overflow-style: none;
  scrollbar-face-color: #555;
  scrollbar-track-color: #1e1e1e;
}

a {
  text-decoration: none;
  color: cyan;
}

a:visited {
  color: cyan;
}

main {
  justify-content: center;
  padding: 0 50px;
}

h2 {
  padding-top: 60px;
  font-size: 2rem;
}

.indented_p {
  text-indent: 5px;
}

p, ul {
  padding-top: 20px;
  font-size: 1.2rem;
  line-height: 1.4rem;
}

li {
  padding-top: 5px;
  padding-bottom: 5px;
  list-style-type: none;
}

.to_index {
  position: relative;
  top: 30px;
  font-weight: 400;
  font-style: normal;
  text-decoration: none;
  margin-left: 40px;
}

header {
  display: flex;
  width: 100%;
  height: 100px;
  border-bottom: 1px solid rgba(0, 255, 255, .5);
}

.logo_container {
  background-image: url(./logos/carcamusa_labs_logo1.png);
  background-position: center;
  width: 100px;
  height: 100px;
  margin-left: 20px;
  background-size: cover;
  background-repeat: no-repeat;
}

.main_title {
  position: relative;
  top: 15px;
  justify-content: center;
  margin-left: 30px;
  font-weight: 400;
  font-size: 5rem;
}

.by {
  font-size: 1.5rem;
  color: cyan;
}

.menu {
  background-color: #1b1b1b;
  border-top: 1px solid rgba(0, 255, 255, .5);
  margin-left: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: center;
  margin-right: 30px;
}

.menu ul {
  list-style: none;
  width: 100px;
  margin: 0;
  padding: 0;
}

.menu ul li {
  display: inline-block;
  position: relative;
  width: 100%;
  font-family: "Segoe UI Emoji", "Apple Color Emoji", "Noto Color Emoji", sans-serif;
}

.menu a {
  display: block;
  color: whitesmoke;
  text-decoration: none;
  text-align: center;
}

.menu ul ul {
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  background-color: #1b1b1b;
}

.menu ul li:hover > ul {
  display: inherit;
}

.menu a:hover {
  background-color: #1b1b1b;
}

.menu ul ul a {
  padding: 15px 40px;
  color: #fff;
}

.menu #lang_logo:hover {
  background-color: #1b1b1b;
}

.download_button {
  background-color: #1b1b1b;
  color: cyan;
  margin: 20px 0;
  padding: 20px; 
  width: fit-content;
  border-top: 1px solid rgba(0, 255, 255, .5);
  cursor: pointer;
  font-size: 1rem;
}

h3 {
  font-weight: lighter;
  margin: 40px 0 20px 0;
  font-size: 1.5rem;
}

.cube, .cube * {
  position: absolute;
  top: 25vh;
  left: 50%;
}

.cube {
  user-select: none;
  cursor: move;
  transform-style: preserve-3d;
  transition: transform 0.5s;
}

.cube div a {
  text-align: right;
  top: 50%;
  left: -50%;
  transform: translate(-50%, -50%);
  font-size: 1.5em;
  white-space: nowrap;
  color: whitesmoke;
}

.face {
  display: flex;
  box-sizing: border-box;
  flex-direction: column;
  justify-content: flex-start;
  align-content: flex-end;
  border: 1px solid cyan;
  margin: -8em;
  width: 14em;
  height: 14em;
  background: black;
  box-shadow: inset 0 0 15px rgba(0, 0, 255, 0.6);
  backface-visibility: hidden;
}

.cv {
  height: 600px;
}

.grid_container_outer, .projects_grid_container_outer {
  display: flex;
  width: 100%;
  height: auto;
}

.projects_grid_container_outer {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  height: auto;
}

.grid_container_inner_left, .grid_container_inner_right {
  padding: 20px;
  margin: 5px;
  width: 49%; /* A little less than 50% so that elements fit in two lines, but don't overflow due to margin */
  background-color: #1b1b1b;
  display: flex;
  flex-direction: column;
}

.grid_container_imageslot {
  width: fit-content;
  display: flex;
  align-items: center;
  justify-items: center;
  justify-content: center;
  align-self: center;
  max-width: 420px;
  max-height: 420px;
  overflow: hidden;
  border-radius: 2px;
}

.grid_container_textswrap {
  display: flex;
  flex-direction: row;
}

.grid_container_bigtext {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  margin-right: 20px;
}

.grid_container_smalltext {
  display: flex;
  flex-direction: column;
  flex-grow: 2;
  margin-left: 20px;
}

.projects_project_title {
  margin: 0;
  margin: 20px 0;
  font-size: 1.5rem;
}

.projects_project_platform {
  font-size: 1.25rem;
}

.projects_project_stack {
  font-size: 1rem;
}

.artworks_assets_grid_container {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  flex-basis: auto;
  height: 100vh;
  overflow: scroll;
}

.artworks_assets_grid_card {
  background-color: #1b1b1b;
  width: fit-content;
  height: fit-content;
  max-width: auto;
  max-height: auto;
  justify-items: center;
  overflow: hidden;
  margin: 10px;
}

.artworks_assets_card_imageslot {
  padding: 20px;
  max-width: 200px;
  max-height: 200px;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.artworks_assets_card_imageslot img {
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
}

.artworks_assets_card_textswrap {
  padding: 5px;
}

.artworks_assets_used_in {
  text-align: center;
  margin: 5px;
}

.artworks_assets_stack {
  text-align: center;
  margin: 5px 0 10px 0;
}

.tools_container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100vh;
  overflow: scroll;
}

.tool_card {
  margin: 10px 0;
  width: 100%;
  background-color: #1b1b1b;
  display: flex;
  justify-content: space-between;
}

.tool_card_imageslot {
  width: 25%;
  min-width: 25%;
  height: auto;
  max-height: 400px;
  padding: 20px;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.tool_card_imageslot img {
  max-width: 100%;
  max-height: 100%;
  object-fit: cover;
}

.tools_text_wrapper {
  width: 75%; /* Change to 70 if layour breaks */
  padding: 0 30px;
  display: flex;
  flex-direction: column;
}

.tools_name {
  font-weight: bold;
}

.tools_description {
  font-size: 1.5rem;
  line-height: 1.8rem;
}

.last_p {
  margin-bottom: 60px;
}

footer {
  text-align: end;
  margin-top: auto;
  background-color: black;
  color: whitesmoke;
  border-top: 1px solid rgba(0, 255, 255, .5);
}

footer div {
  background-color: #1b1b1b;
  width: fit-content;
  margin-left: auto;
  padding: 20px;
}

